maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: not found: value repererCasesAjdacentes
          	marquerCasesAdjacentes(repererCasesAjdacentes(i,j),i,j)
                                       ^JediEscaper:57: error: reassignment to val
    i = true
      ^JediEscaper:81: error: not found: value casesAjdacentes
  if (casesAjdacentes(1)==true)
      ^JediEscaper:86: error: not found: value casesAjdacentes
  if (casesAjdacentes(2)==true)
      ^JediEscaper:88: error: Int does not take parameters
    if (getIndication(X+1,Y()==9999))
                           ^JediEscaper:100: error: too many arguments for method getIndication: (x: Int, y: Int)Int
  var indications:Array[Int]=(getIndication(getX()-1,getY()),getIndication(getX(),getY()-1,getIndication(getX()+1,getY()),getIndication(getX(),getY()+1)))
                                                                          ^JediEscaper:115: error: not found: value indication
  if (minimum==indication(1))                                                                 {
               ^