maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  repererSortie()
  var valeur=0
  while (!marquageComplet())
  {
    for (i <- 0 to getMondeLargeur()-1)
    {
      for (j <- 0 to getMondeHauteur()-1)
      {
					if (getIndication(i,j)==valeur)
        	{
          	marquerCasesAdjacentes(repererCasesAjdacentes(i,j),i,j)
        	}
        	valeur +=1
      }
    }
  }
  allerSortie()
  prendBiscuit()
}

def marquageComplet():Boolean = //vérifie si on a marqué toutes les cases
{
  for (i <- 0 to getMondeLargeur()-1)
  {
    for (j <- 0 to getMondeHauteur()-1)
    {
      if (getIndication(i,j)==9999)
      {
        return false
      }
    }
  }
  return true
}

def repererSortie() //repère sortie, y met 0
{
  for (i <- 0 to getMondeLargeur()-1)
  {
    for (j <- 0 to getMondeHauteur()-1)
    {
      if (aBiscuit(i,j))
      {
        setIndication(i,j,0)
      }
    }
  }
}

def repererCasesAdjacentes(X:Int,Y:Int):Array[Boolean]= //repère cases adjacentes
{
  var casesAdjacentes:Array[Boolean]=new Array[Boolean](4)
  for (i<- casesAdjacentes)
  {
    i = true
  }
  //on analyse sa propre case
  if (aMurOuest(X,Y))
    casesAdjacentes(0)=false
  if (aMurNord(X,Y))
    casesAdjacentes(1)=false
  //on analyse case à droite
  if (aMurOuest(X,Y))
  	casesAdjacentes(2)=false
  //on analyse case en dessous
  if (aMurNord(X,Y))
  	casesAdjacentes(3)=false
  return casesAdjacentes
}

def marquerCasesAdjacentes(casesAdjacentes:Array[Boolean],X:Int,Y:Int) //marque cases adjacentes
{
  var maCase=getIndication(X,Y)
  if (casesAdjacentes(0)==true)
  {
    if (getIndication(X-1,Y)==9999)
    	setIndication(X-1,Y,maCase+1)
  }
  if (casesAjdacentes(1)==true)
  {
    if (getIndication(X,Y-1)==9999)
    	setIndication(getX(),getY()+1,maCase+1)
  }
  if (casesAjdacentes(2)==true)
  {
    if (getIndication(X+1,Y()==9999))
    	setIndication(X+1,Y,maCase+1)
  }
  else
  {
    if (getIndication(X,Y+1)==9999)
    	setIndication(X,Y+1,maCase+1)
  }
}

def allerSortie() //atteint la sortie en lisant le sol
{
  var indications:Array[Int]=(getIndication(getX()-1,getY()),getIndication(getX(),getY()-1,getIndication(getX()+1,getY()),getIndication(getX(),getY()+1)))
  var minimum=9999
  for (i<- indications)
  {
    if (i<minimum)
    {
      minimum=i
    }
  }
  if (minimum==indications(0))
  {
    gauche()
  	avance()
    droite()
  }
  if (minimum==indication(1))                                                                 {
    avance()
  }
	if (minimum==indications(2))
	{
    droite()
    avance()
    gauche()
  }
	else
		recule()                                                                           
}